--- a/Regna.Web/Regna.Web.csproj
+++ b/Regna.Web/Regna.Web.csproj
@@ -14,6 +14,9 @@
     <Reference Include="Regna.Core">
       <HintPath>..\Regna.Core\bin\Debug\net6.0\Regna.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Regna.VM">
+      <HintPath>..\AllRef\Debug\net6.0\Regna.VM.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
